--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,103 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@color/background"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".ChangePasswordActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:drawableRight="@drawable/logosmall"
         android:drawablePadding="10dp"
+        android:drawableTint="@color/black"
         android:fontFamily="casual"
-        android:text="ChatterBox"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.164" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.675"
-        tools:layout_editor_absoluteX="0dp">
-
-
-        <EditText
-            android:id="@+id/txtOldPass"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/text_rounded_corner"
-            android:ems="10"
-            android:hint="Enter your old password"
-            android:inputType="textPassword"
-            android:padding="10dp" />
-
-        <EditText
-            android:id="@+id/txtNewPass"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/text_rounded_corner"
-            android:ems="10"
-            android:hint="Enter new password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            tools:layout_editor_absoluteX="38dp"
-            tools:layout_editor_absoluteY="362dp" />
-
-        <EditText
-            android:id="@+id/txtNewPass2"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/text_rounded_corner"
-            android:ems="10"
-            android:hint="Confirm new password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="294dp" />
-
-        <Button
-            android:id="@+id/btnChangePass"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Change Password" />
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:backgroundTint="@android:color/holo_red_light"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Cancel" />
-    </LinearLayout>
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="112dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -109,10 +39,80 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="197dp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="268dp">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:id="@+id/txtOldPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
+            android:ems="10"
+            android:hint="Enter your old password"
+            android:inputType="textPassword"
+            android:padding="17dp" />
+
+        <EditText
+            android:id="@+id/txtNewPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
+            android:ems="10"
+            android:hint="Enter new password"
+            android:inputType="textPassword"
+            android:padding="17dp"
+            tools:layout_editor_absoluteX="38dp"
+            tools:layout_editor_absoluteY="362dp" />
+
+        <EditText
+            android:id="@+id/txtNewPass2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/text_rounded_corner"
+            android:ems="10"
+            android:hint="Confirm new password"
+            android:inputType="textPassword"
+            android:padding="17dp"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="294dp" />
+
+        <Button
+            android:id="@+id/btnChangePass"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Change Password"
+            android:textSize="16sp"
+            app:cornerRadius="10dp" />
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@android:color/holo_red_light"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Cancel"
+            android:textSize="16sp"
+            app:cornerRadius="10dp" />
+    </LinearLayout>
+
+
+</LinearLayout>
