--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@color/background"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="47dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:drawableRight="@drawable/logosmall"
         android:drawablePadding="10dp"
+        android:drawableTint="@color/black"
         android:fontFamily="casual"
-        android:text="ChatterBox"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.171" />
+        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -33,21 +33,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.417"
         tools:layout_editor_absoluteX="0dp">
 
         <EditText
             android:id="@+id/txtLoginEmail"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/text_rounded_corner"
             android:ems="10"
             android:hint="Email"
             android:inputType="text"
-            android:padding="10dp"
+            android:padding="17dp"
             android:textSize="20sp"
             tools:layout_editor_absoluteX="20dp"
             tools:layout_editor_absoluteY="270dp" />
@@ -55,13 +52,12 @@
         <EditText
             android:id="@+id/txtPassword"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/text_rounded_corner"
-            android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
-            android:padding="10dp"
+            android:padding="17dp"
             android:textSize="20sp"
             tools:layout_editor_absoluteX="20dp"
             tools:layout_editor_absoluteY="400dp" />
@@ -72,9 +68,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55"
         tools:layout_editor_absoluteX="-27dp">
 
         <Button
@@ -110,15 +103,12 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:padding="12dp"
         android:text="Login"
         android:textSize="18sp"
-        app:cornerRadius="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.69" />
+        app:cornerRadius="10dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
