--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,7 +25,7 @@
             android:layout_weight="1"
             android:background="@color/splashback"
             android:contentDescription="back"
-            app:srcCompat="@drawable/iconback" />
+            app:srcCompat="@drawable/icon_back" />
 
         <TextView
             android:id="@+id/textView4"
@@ -72,7 +72,7 @@
             android:background="@null"
             android:contentDescription="search2"
             android:padding="10dp"
-            app:srcCompat="@drawable/iconsearch" />
+            app:srcCompat="@drawable/icon_search" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
