--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,7 +57,7 @@
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/splashback"
             android:scaleType="fitXY"
-            android:src="@drawable/person_icon" />
+            android:src="@drawable/icon_person" />
 
         <ImageButton
             android:id="@+id/editpicBtn"
@@ -73,76 +73,74 @@
     <EditText
         android:id="@+id/profilenameTxt"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/text_rounded_corner"
         android:drawableRight="@drawable/icon_editable"
         android:ems="10"
         android:inputType="text"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="Name"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/profileusernameTxt"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/text_rounded_corner"
         android:drawableRight="@drawable/icon_editable"
         android:ems="10"
         android:inputType="text"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="Username"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/profileemailTxt"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/text_rounded_corner"
         android:ems="10"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="Email"
         android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/profileupdateBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="15dp"
+            android:layout_margin="10dp"
+            android:padding="10dp"
             android:text="Update Profile"
-            android:textSize="16sp"
-            app:cornerRadius="5dp" />
+            android:textSize="14sp"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/cngPass"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1"
-            android:padding="15dp"
+            android:padding="10dp"
             android:text="Change Password"
-            android:textSize="16sp"
-            app:cornerRadius="5dp" />
+            android:textSize="14sp"
+            app:cornerRadius="10dp" />
 
     </LinearLayout>
 
@@ -152,8 +150,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:backgroundTint="#FD0000"
+        android:drawableRight="@drawable/icon_logout"
+        android:drawablePadding="5dp"
+        android:drawableTint="@color/white"
         android:padding="10dp"
         android:text="Logout"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        app:cornerRadius="10dp" />
 
 </LinearLayout>
