--- a/app/src/main/res/layout/profile_pic.xml
+++ b/app/src/main/res/layout/profile_pic.xml
@@ -14,6 +14,5 @@
         android:layout_margin="10dp"
         android:layout_weight="1"
         android:padding="4dp"
-        android:src="@drawable/iconprofile"
-        />
+        android:src="@drawable/icon_person" />
 </LinearLayout>
