--- a/app/src/main/res/layout/recent_chat_recycler.xml
+++ b/app/src/main/res/layout/recent_chat_recycler.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:layout_margin="10dp"
     android:background="@drawable/text_rounded_corner"
     android:backgroundTint="@color/background"
@@ -17,8 +17,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -29,6 +29,7 @@
                 android:id="@+id/fullNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:text="Name" />
@@ -47,6 +48,7 @@
             android:id="@+id/lastMsgTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:textColor="@color/black"
             tools:text="Last Message" />
     </LinearLayout>
