--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -5,10 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".ChangePasswordActivity">
+    tools:context=".ChangeEmailActivity">
 
     <LinearLayout
         android:id="@+id/topBar"
@@ -19,7 +18,7 @@
         tools:layout_editor_absoluteX="-16dp">
 
         <ImageButton
-            android:id="@+id/btnChangePassBack"
+            android:id="@+id/btnChangeEmailBack"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -51,11 +50,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:drawableLeft="@drawable/icon_password"
+        android:drawableLeft="@drawable/icon_email"
         android:drawablePadding="5dp"
         android:fontFamily="sans-serif-smallcaps"
         android:padding="15dp"
-        android:text="Change Your Password:"
+        android:text="Change Your Email Address:"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -72,44 +71,33 @@
 
 
         <EditText
-            android:id="@+id/txtOldPass"
+            android:id="@+id/txtChangeEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/text_rounded_corner"
             android:ems="10"
-            android:hint="Enter your old password"
-            android:inputType="textPassword"
-            android:padding="17dp" />
-
-        <EditText
-            android:id="@+id/txtNewPass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/text_rounded_corner"
-            android:ems="10"
-            android:hint="Enter new password"
-            android:inputType="textPassword"
+            android:hint="Enter new email address"
+            android:inputType="text"
             android:padding="17dp"
             tools:layout_editor_absoluteX="38dp"
             tools:layout_editor_absoluteY="362dp" />
 
         <EditText
-            android:id="@+id/txtNewPass2"
+            android:id="@+id/txtChangeEmailPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/text_rounded_corner"
             android:ems="10"
-            android:hint="Confirm new password"
+            android:hint="Enter your password"
             android:inputType="textPassword"
             android:padding="17dp"
             tools:layout_editor_absoluteX="30dp"
             tools:layout_editor_absoluteY="294dp" />
 
         <Button
-            android:id="@+id/btnChangePass"
+            android:id="@+id/btnChangeEmail"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -117,11 +105,10 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Change Password"
+            android:text="Change Email"
             android:textSize="16sp"
             app:cornerRadius="10dp" />
 
     </LinearLayout>
-
 
 </LinearLayout>
