--- a/app/src/main/res/layout/activity_delete_user.xml
+++ b/app/src/main/res/layout/activity_delete_user.xml
@@ -5,10 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context=".ChangePasswordActivity">
+    tools:context=".DeleteUserActivity">
 
     <LinearLayout
         android:id="@+id/topBar"
@@ -19,7 +18,7 @@
         tools:layout_editor_absoluteX="-16dp">
 
         <ImageButton
-            android:id="@+id/btnChangePassBack"
+            android:id="@+id/btnDeleteBack"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -47,15 +46,14 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:drawableLeft="@drawable/icon_password"
+        android:drawableLeft="@drawable/icon_email"
         android:drawablePadding="5dp"
         android:fontFamily="sans-serif-smallcaps"
         android:padding="15dp"
-        android:text="Change Your Password:"
+        android:text="Delete Your ChatterBox Account:"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -63,7 +61,6 @@
         tools:layout_editor_absoluteY="197dp" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -71,45 +68,41 @@
         tools:layout_editor_absoluteY="268dp">
 
 
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="@string/delete"
+            android:textSize="20sp" />
+
         <EditText
-            android:id="@+id/txtOldPass"
+            android:id="@+id/txtDeleteConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/text_rounded_corner"
             android:ems="10"
-            android:hint="Enter your old password"
-            android:inputType="textPassword"
+            android:hint='Type "CONFIRM"'
+            android:inputType="text"
             android:padding="17dp" />
 
         <EditText
-            android:id="@+id/txtNewPass"
+            android:id="@+id/txtDeletePass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/text_rounded_corner"
             android:ems="10"
-            android:hint="Enter new password"
-            android:inputType="textPassword"
-            android:padding="17dp"
-            tools:layout_editor_absoluteX="38dp"
-            tools:layout_editor_absoluteY="362dp" />
-
-        <EditText
-            android:id="@+id/txtNewPass2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/text_rounded_corner"
-            android:ems="10"
-            android:hint="Confirm new password"
+            android:hint="Enter your password"
             android:inputType="textPassword"
             android:padding="17dp"
             tools:layout_editor_absoluteX="30dp"
             tools:layout_editor_absoluteY="294dp" />
 
         <Button
-            android:id="@+id/btnChangePass"
+            android:id="@+id/btnDelete"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -117,11 +110,10 @@
             android:layout_marginBottom="5dp"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Change Password"
+            android:text="Delete Account"
             android:textSize="16sp"
             app:cornerRadius="10dp" />
 
     </LinearLayout>
-
 
 </LinearLayout>
