--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="vertical"
     tools:context=".SearchActivity">
 
     <LinearLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
+        android:layout_alignParentTop="false"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="-16dp">
 
         <ImageButton
-            android:id="@+id/btnBack"
-            android:layout_width="60dp"
+            android:id="@+id/btnSearchBack"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@color/splashback"
             android:contentDescription="back"
@@ -29,24 +28,42 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/splashback"
+            android:drawableLeft="@drawable/logosmall"
+            android:drawablePadding="10dp"
+            android:drawableTint="@color/black"
             android:fontFamily="monospace"
-            android:gravity="fill"
-            android:padding="10dp"
-            android:text="Search User"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="@string/app_name"
             android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textSize="34sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/icon_search"
+        android:drawablePadding="5dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:padding="15dp"
+        android:text="Search Users"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="197dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_below="@id/topBar"
         android:gravity="center"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="0dp"
@@ -83,4 +100,4 @@
         android:padding="10dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="142dp" />
-</RelativeLayout>
+</LinearLayout>
