--- a/app/src/main/res/layout/profile_pic.xml
+++ b/app/src/main/res/layout/profile_pic.xml
@@ -5,14 +5,15 @@
     android:layout_height="wrap_content"
     android:backgroundTint="#D1CDCD">
 
-
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilePic"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:layout_weight="1"
-        android:padding="4dp"
-        android:src="@drawable/icon_person" />
+        android:src="@drawable/icon_person"
+        app:civ_border_color="@color/black"
+        app:civ_border_width="1dp" />
+
 </LinearLayout>
