--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -31,7 +31,8 @@
                 android:id="@+id/postName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
+                android:layout_marginTop="8dp"
+                android:paddingLeft="5dp"
                 android:text="Name"
                 android:textColor="@color/black"
                 android:textSize="20sp"
