--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -12,19 +12,22 @@
         android:layout_height="2dp"
         android:background="?android:attr/listDivider" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <include
+            android:id="@+id/profilePicLayout"
             layout="@layout/profile_pic"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/btnPostDelete"
+            android:layout_toRightOf="@id/profilePicLayout"
             android:orientation="vertical">
 
             <TextView
@@ -47,9 +50,31 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtPostTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:text="Time"
+                android:textColor="@color/black"
+                android:textSize="13sp" />
+
         </LinearLayout>
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/btnPostDelete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="false"
+            android:layout_centerVertical="true"
+            android:backgroundTint="@color/background"
+            android:contentDescription="post delete"
+            android:src="@drawable/icon_delete"
+            android:tint="@android:color/holo_red_light" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txtPost"
@@ -58,7 +83,7 @@
         android:padding="10dp"
         android:text="Post"
         android:textColor="@color/black"
-        android:textSize="22sp" />
+        android:textSize="19sp" />
 
     <ImageView
         android:id="@+id/imgPost"
