--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -21,7 +21,8 @@
             layout="@layout/profile_pic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
