--- a/app/src/main/res/layout/chat_message_recycler.xml
+++ b/app/src/main/res/layout/chat_message_recycler.xml
@@ -29,8 +29,19 @@
             android:background="@drawable/text_rounded_corner"
             android:backgroundTint="@color/receiver"
             android:padding="10dp"
+            android:text="msg"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/txtOtherTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="5dp"
+            android:text="time"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -57,8 +68,19 @@
             android:background="@drawable/text_rounded_corner"
             android:backgroundTint="@color/sender"
             android:padding="10dp"
+            android:text="msg"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/txtMyTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="5dp"
+            android:text="time"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </RelativeLayout>
