--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,14 +14,14 @@
         android:layout_height="80dp"
         android:layout_alignParentTop="true"
         android:background="@color/splashback"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="0dp">
 
         <ImageButton
             android:id="@+id/btnBackChat"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="50dp"
             android:background="@null"
             android:contentDescription="back"
             app:srcCompat="@drawable/icon_back" />
@@ -34,9 +34,8 @@
 
 
         <LinearLayout
-            android:layout_width="280dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -48,7 +47,7 @@
                 android:gravity="center_vertical"
                 android:text="name"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
