--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -14,7 +14,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical">
 
         <include
             android:id="@+id/profilePicLayout"
@@ -37,7 +39,6 @@
                 android:id="@+id/postName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:paddingLeft="5dp"
                 android:text="Name"
                 android:textColor="@color/black"
@@ -110,25 +111,42 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txtPostLike"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:text="likes"
-            android:textColor="@color/black" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:src="@drawable/icon_like"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="10dp"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:id="@+id/txtPostLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="5dp"
+                android:gravity="left|center_vertical"
+                android:text="likes"
+                android:textColor="@color/black" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txtPostTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:gravity="right"
-            android:paddingLeft="5dp"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
             android:text="Time"
-            android:textColor="@color/black"
-            android:textSize="13sp" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
